# realtime-support-inbox

./: .env.example  README.md  pyproject.toml
app/: CODEBASE_NOTES.md  COMMUNICATION.md  README.md  pubspec.yaml
app/integration_test/: app_test.dart
app/lib/: app.dart  main.dart
app/lib/core/config/: app_config.dart
app/lib/core/network/: api_client.dart
app/lib/core/realtime/: realtime_service.dart  ws_client.dart
app/lib/core/session/: session_store.dart
app/lib/core/theme/: app_theme.dart
app/lib/features/auth/: dev_login_page.dart
app/lib/features/debug/: debug_page.dart
app/lib/features/inbox/bloc/: inbox_bloc.dart  inbox_event.dart  (+1 more)
app/lib/shared/widgets/: empty_view.dart  error_view.dart  loading_view.dart
app/test/: smoke_test.dart
docs/: api-spec.md  candidate-handout.md  change-request-pack.md  product-brief.md  reviewer-rubric.md  ws-events.md
scripts/: emit-demo-events.sh  reset-server.sh  seed-server.sh  start-app.sh  start-server.sh
server/: pyproject.toml
server/app/: main.py
server/app/api/: auth.py  conversations.py
server/app/core/: config.py
server/app/models/: entities.py
server/app/schemas/: auth.py  conversation.py  message.py
server/app/scripts/: disconnect_simulator.py  emit_demo.py  seed_reset.py
server/app/services/: auth_service.py  conversation_service.py  event_emitter.py
server/app/store/: memory.py  seed.py
server/app/tests/: test_http.py  test_ws.py
server/app/ws/: manager.py  router.py
server/realtime_support_inbox_assessment_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+7 files in other folders)
